--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,13 @@ uuid = "aba3b622-f073-4b1a-a80e-2bbc9a109999"
 authors = ["Yao Lu <luyaocns@gmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
+Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
+MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
+TensorBoardLogger = "899adc3e-224a-11e9-021f-63837185c80f"
+
 [compat]
 julia = "1"
 
