--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,7 @@ TensorBoardLogger = "899adc3e-224a-11e9-021f-63837185c80f"
 
 [compat]
 Flux = "0.11"
-MPI = "0.15, 0.16"
+MPI = "0.14, 0.15, 0.16"
 ProgressMeter = "1.4"
 TensorBoardLogger = "0.1"
 julia = "1"
