--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "DistributedFlux"
 uuid = "aba3b622-f073-4b1a-a80e-2bbc9a109999"
 authors = ["Yao Lu <luyaocns@gmail.com> and contributors"]
-version = "0.1.3"
+version = "0.1.4"
 
 [deps]
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
@@ -13,7 +13,7 @@ TensorBoardLogger = "899adc3e-224a-11e9-021f-63837185c80f"
 
 [compat]
 Flux = "0.11, 0.12"
-MPI = "0.14, 0.15, 0.16, 0.17"
+MPI = "0.14, 0.15, 0.16, 0.17, 0.18, 0.19"
 ProgressMeter = "1.4"
 TensorBoardLogger = "0.1"
 julia = "1"
